k8s/api/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: wif-bo-api${HASH_BRANCH_NAME}
  labels:
    app: wif-bo-api${HASH_BRANCH_NAME}
    branch: wif-bo${HASH_BRANCH_NAME}
spec:
  selector:
    app: wif-bo-api${HASH_BRANCH_NAME}
  ports:
  - port: ${PORT}
    name: api
