k8s/api/ingress-prod.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wif-bo-api
  labels:
    app: wif-bo-api
    branch: wif-bo
spec:
  rules:
  - host: wif-bo-api.${ENVIRONMENT}.social.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: wif-bo-api
          servicePort: ${PORT}
  tls:
  - secretName: wif-bo-crt-secret
