k8s/api/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wif-bo-api${HASH_BRANCH_NAME}
  labels:
    app: wif-bo-api${HASH_BRANCH_NAME}
    branch: wif-bo${HASH_BRANCH_NAME}
spec:
  rules:
  - host: ${HASH_BRANCH_INGRESS}wif-bo-api.${ENVIRONMENT}.social.gouv.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: wif-bo-api${HASH_BRANCH_NAME}
          servicePort: ${PORT}
